--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <li><strong>My Blog</strong></li>
             <ul>
                 <li>Django</li>
+                <li>Jinja2</li>
                 <li>SQLite</li>
             </ul>
             <br>
@@ -96,6 +97,7 @@
             <ul>
                 <li>Flask</li>
                 <li>Python - Classes</li>
+                <li>Jinja2</li>
                 <li>Matplotlib</li>
                 <li>MySQL</li>
                 <li>Automated email with STMPLIB </li>
@@ -105,6 +107,7 @@
             <ul>
                 <li>Flask</li>
                 <li>Python - Classes</li>
+                <li>Jinja2</li>
                 <li>Matplotlib</li>
                 <li>MySQL</li>
                 <li>Cryptography - Hashing & others</li>
